welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:1: error: not found: value x
x=0
^Poucet:2: error: not found: value estSurBlanc
while (!estSurBlanc()) {
        ^Poucet:6: error: not found: value x
			x=x+1
                        ^Poucet:9: error: not found: value x
	x=0
        ^