welcome.lessons.welcome.loopdowhile.Poucet.scala.code
x=0
while (!estSurBlanc()) {
	do {
		avance()
		if (estSurBiscuit()) {
			x=x+1
		}
	} while (!croisement())
	x=0
}
